# soth-mitm

./: .dockerignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LIGHTWEIGHT_PROXY_REPO_IMPLEMENTATION_PLAN.md  MITMPROXY_LESSONS_LEARNED_FOR_SOTH_MITM.md  PROXY_TESTING_AND_HARDENING_PLAN.md  README.md  RUST_SOTH_MITM_IMPLEMENTATION_CHECKLIST.md  SECURITY.md  SUPPORT.md  deny.toml  docker-compose.yml
crates/mitm-core/: Cargo.toml
crates/mitm-core/src/: config.rs  config_compat.rs  config_route.rs  flow_state.rs  flow_state_tests.rs  lib.rs  server.rs  tests_config_schema.rs  tests_connect_parser.rs  tests_engine_guardrails.rs
crates/mitm-core/tests/: conformance_golden.rs  connect_parser_proptest.rs  server_concurrency.rs
crates/mitm-core/tests/fixtures/: connect_event_conformance.json
crates/mitm-sidecar/: Cargo.toml
crates/mitm-sidecar/src/: close_codes.rs  downstream_tls.rs  event_emitters.rs  event_emitters_protocol.rs  flow_connect_tunnel.rs  flow_forward_proxy_http1.rs  flow_forward_proxy_http1_helpers.rs  flow_hook_http_helpers.rs  flow_hooks.rs  flow_intercept.rs  flow_intercept_http1.rs  flow_intercept_http1_response.rs  flow_policy_snapshot.rs  grpc_stream_observer.rs  http2_relay_support.rs  http2_stream_hook_dispatch.rs  http2_stream_relay.rs  http2_stream_relay_body.rs  http2_stream_relay_http1.rs  http2_stream_relay_http1_body.rs  http2_stream_relay_http1_response_relay.rs  http2_stream_relay_http1_stream.rs  http2_stream_relay_stream.rs  http2_stream_response_relay.rs  http_body_relay.rs  http_head_parser.rs  http_head_parser_api.rs  io_timeouts.rs  lib.rs  local_capture_unix.rs  main.rs  mitmproxy_tls_ops.rs  module_includes.rs  ndjson_stream_observer.rs  route_planner.rs  route_planner_model.rs  route_planner_transport.rs  runtime_governor.rs  shutdown_control.rs  socket_hardening.rs  (+10 more)
crates/mitm-sidecar/tests/: automation_contract.rs  chaos_charter.rs  grpc_http2_mitm.rs  http1_head_corpus.rs  http1_mitm.rs  http2_mitm.rs  http3_passthrough_mitm.rs  mitmproxy_tls_adapter.rs  mixed_traffic_soak.rs  phase_a.rs  route_mode_matrix.rs  runtime_governor.rs  socket_hardening.rs  sse_mitm.rs  tls_fingerprint_parity.rs  tls_learning_guardrails.rs  tls_profile_matrix.rs  tls_revocation_matrix.rs  tls_upstream_mtls_matrix.rs  websocket_mitm.rs  websocket_reliability_soak.rs
crates/mitm-sidecar/tests/http1_mitm_cases/: downstream_and_cache.rs  smuggling_guards.rs  success_paths.rs  upstream_and_counters.rs
crates/mitm-tls/: Cargo.toml
crates/mitm-tls/src/: certificate_store_impl.rs  certificate_store_openssl.rs  lib.rs  tests_tls_basics.rs  tls_profile_policy.rs
crates/mitm-tls/tests/: tls_classification_proptest.rs
crates/soth-detect/: Cargo.toml
crates/soth-detect/benches/: intelligence_bench.rs
crates/soth-detect/examples/: closeout_gate.rs
crates/soth-detect/src/: code.rs  engine.rs  fingerprint.rs  graphql.rs  grpc.rs  hash.rs  heuristic.rs  identity.rs  intelligence.rs  intelligence_store.rs  lib.rs  replay.rs  rest.rs  sensitive.rs  stream.rs  types.rs  util.rs
crates/soth-mitm/: Cargo.toml
crates/soth-mitm/benches/: common.rs  forwarding_latency.rs  handshake_overhead.rs  sse_first_chunk.rs
crates/soth-mitm/examples/: bench_hudsucker.rs  bench_proxy.rs  bench_sidecar_lean.rs  soth_proxy_integration.rs
crates/soth-mitm/src/: action_apply.rs  actions.rs  buffering.rs  builder.rs  ca.rs  config.rs  connection_identity.rs  connection_lifecycle.rs  destination.rs  errors.rs  fingerprint_capture.rs  handler.rs  handler_checkpoint.rs  handler_outcome.rs  header_rewrite.rs  leaf_cache.rs  lib.rs  metrics.rs  proxy.rs  runtime.rs  sse_dispatch.rs  tls_intercept_contract.rs  types.rs  upstream_failures.rs
crates/soth-mitm/src/ca_trust/: backend_common.rs  linux.rs  macos.rs  mod.rs  unsupported.rs  windows.rs
crates/soth-mitm/src/engine/: config.rs  config_route.rs  engine_policy_decision.rs  flow_state.rs  flow_state_tests.rs  mod.rs  policy_decision.rs  server.rs  tests_engine_guardrails.rs
crates/soth-mitm/src/observe/: event_log_v2.rs  mod.rs
crates/soth-mitm/src/policy/: mod.rs
crates/soth-mitm/src/process/: linux.rs  macos.rs  mod.rs  socket_pid.rs  tests.rs  unsupported.rs  windows.rs
crates/soth-mitm/src/protocol/: anti_hijack.rs  decoder_chain.rs  grpc_envelope.rs  mod.rs  sse_parser.rs
crates/soth-mitm/src/runtime/: connection_id.rs  connection_meta.rs  flow_dispatch.rs  flow_hooks.rs  flow_hooks_tests.rs  flow_lifecycle.rs  fsm.rs  handler_guard.rs  http2_resilience.rs  mod.rs  tests.rs  timeouts.rs  tls_intercept_backoff.rs
crates/soth-mitm/src/server/: close_codes.rs  downstream_tls.rs  event_emitters.rs  event_emitters_protocol.rs  flow_connect_tunnel.rs  flow_connect_tunnel_support.rs  flow_forward_proxy_http1.rs  flow_forward_proxy_http1_helpers.rs  flow_hook_http_helpers.rs  flow_hooks.rs  flow_intercept.rs  flow_intercept_http1.rs  flow_intercept_http1_response.rs  flow_intercept_tls_failure.rs  flow_policy_snapshot.rs  grpc_stream_observer.rs  mod.rs  (+35 more)
crates/soth-mitm/tests/: anti_hijack.rs  api_contract.rs  chaos_charter.rs  config_validation.rs  conformance_golden.rs  connect_parser_proptest.rs  decoder_chain.rs  event_log_v2.rs  grpc_envelope_proptest.rs  grpc_http2_mitm.rs  http1_head_corpus.rs  http1_mitm.rs  http2_mitm.rs  http3_passthrough_mitm.rs  mitmproxy_tls_adapter.rs  mixed_traffic_soak.rs  phase_a.rs  route_mode_matrix.rs  runtime_governor.rs  server_concurrency.rs  socket_hardening.rs  sse_mitm.rs  sse_parser_proptest.rs  tls_classification_proptest.rs  tls_fingerprint_parity.rs  tls_learning_guardrails.rs  tls_profile_matrix.rs  tls_revocation_matrix.rs  tls_upstream_mtls_matrix.rs  websocket_mitm.rs  websocket_reliability_soak.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/corpus/connect_parser/: seed
fuzz/corpus/http_header_parsing/: seed
fuzz/corpus/tls_classification/: seed
fuzz/fuzz_targets/: connect_parser.rs  decoder_layering_interactions.rs  grpc_framing.rs  http_header_parsing.rs  msgpack_decoder.rs  sse_parser.rs  tls_classification.rs  websocket_framing.rs
(+148 files in other folders)
