[workspace]
resolver = "2"
members = [
    "crates/mitm-core",
    "crates/mitm-http",
    "crates/mitm-observe",
    "crates/mitm-policy",
    "crates/mitm-sidecar",
    "crates/mitm-tls",
    "crates/soth-mitm",
    "crates/soth-detect",
]
default-members = [
    "crates/mitm-core",
    "crates/mitm-http",
    "crates/mitm-observe",
    "crates/mitm-policy",
    "crates/mitm-sidecar",
    "crates/mitm-tls",
    "crates/soth-mitm",
    "crates/soth-detect",
]
exclude = [
    "tests/tools/mock_mcp_server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MPL-2.0"
repository = "https://github.com/soth-ai/soth-mitm"
authors = ["Labterminal"]

[workspace.dependencies]
# Internal crates
mitm-core = { path = "crates/mitm-core" }
mitm-http = { path = "crates/mitm-http" }
mitm-observe = { path = "crates/mitm-observe" }
mitm-policy = { path = "crates/mitm-policy" }
mitm-sidecar = { path = "crates/mitm-sidecar" }
mitm-tls = { path = "crates/mitm-tls" }
soth-mitm = { path = "crates/soth-mitm" }
soth-detect = { path = "crates/soth-detect" }

# Async runtime
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "net",
    "sync",
    "fs",
    "time",
    "process",
    "io-util",
    "io-std",
] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
bs58 = "0.5"
rand = "0.8"
base64 = "0.22"

# Policy (OPA Wasm)
wasmtime = "17"

# HTTP/Proxy
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "http2",
    "gzip",
] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "tokio"] }
h2 = "0.4"
http-body-util = "0.1"
tokio-tungstenite = "0.21"

# TLS
rcgen = "0.14"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
x509-parser = "0.16"
webpki-roots = "0.26"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
once_cell = "1"
dashmap = "6"
parking_lot = "0.12"
dirs = "5"

# Metrics/Monitoring
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Testing
tempfile = "3"
proptest = "1"

# File watching
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
debug = 0
incremental = false

[profile.bench]
inherits = "release"
debug = 1
strip = "none"
lto = "thin"
codegen-units = 1
incremental = false

[profile.profiling]
inherits = "release"
debug = 2
strip = "none"
lto = "off"
codegen-units = 16
incremental = false
