[package]
name = "mitm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mitm-http = { path = "../mitm-http" }
mitm-observe = { path = "../mitm-observe" }
mitm-policy = { path = "../mitm-policy" }
mitm-tls = { path = "../mitm-tls" }
