[package]
name = "mitm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mitm-http = { path = "../mitm-http", version = "0.1.0" }
mitm-observe = { path = "../mitm-observe", version = "0.1.0" }
mitm-policy = { path = "../mitm-policy", version = "0.1.0" }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "rt", "sync"] }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "io-util"] }
