[package]
name = "mitm-sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bytes = "1"
h2 = { workspace = true }
http = "1"
mitm-core = { path = "../mitm-core" }
mitm-http = { path = "../mitm-http" }
mitm-observe = { path = "../mitm-observe" }
mitm-policy = { path = "../mitm-policy" }
mitm-tls = { path = "../mitm-tls" }
openssl = { version = "0.10", features = ["vendored"] }
pin-project-lite = "0.2"
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-openssl = "0.6"
tokio-rustls = { workspace = true }

[dev-dependencies]
