[package]
name = "soth-detect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
bytes = "1"
lru = "0.12"
graphql-parser = "0.4"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
once_cell = { workspace = true }
regex = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "intelligence_bench"
harness = false
