[package]
name = "soth-mitm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Rust intercepting proxy crate with deterministic handler/event contracts for SOTH."
readme = "README.md"
repository = "https://github.com/soth/soth-mitm"
keywords = ["proxy", "mitm", "http", "tls"]
categories = ["network-programming"]

[package.metadata.p6_27]
forbidden_action_variants = ["Delay", "Hold"]
forbidden_provider_terms = [
  "openai",
  "anthropic",
  "claude",
  "gpt",
  "gemini",
  "mistral",
  "llama",
  "bedrock",
  "cohere",
  "perplexity",
]
forbidden_telemetry_deps = [
  "opentelemetry",
  "opentelemetry_sdk",
  "tracing-opentelemetry",
  "sentry",
  "sentry-core",
  "sentry-tracing",
  "prometheus",
  "metrics-exporter-prometheus",
  "datadog",
]

[dependencies]
bytes = "1"
dashmap = { workspace = true }
futures = { workspace = true }
http = "1"
lru = "0.12"
mitm-core = { path = "../mitm-core", version = "0.1.0" }
mitm-http = { path = "../mitm-http", version = "0.1.0" }
mitm-observe = { path = "../mitm-observe", version = "0.1.0" }
mitm-policy = { path = "../mitm-policy", version = "0.1.0" }
mitm-sidecar = { path = "../mitm-sidecar", version = "0.1.0" }
parking_lot = { workspace = true }
rcgen = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process", "rt", "sync", "time"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
mitm-tls = { path = "../mitm-tls", version = "0.1.0" }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-rustls = { workspace = true }

[[bench]]
name = "forwarding_latency"
harness = false

[[bench]]
name = "handshake_overhead"
harness = false

[[bench]]
name = "sse_first_chunk"
harness = false
