[package]
name = "soth-mitm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Rust intercepting proxy crate with deterministic handler/event contracts for SOTH."
readme = "README.md"
repository = "https://github.com/soth-ai/soth-mitm"
keywords = ["proxy", "mitm", "http", "tls"]
categories = ["network-programming"]

[package.metadata.p6_27]
forbidden_action_variants = ["Delay", "Hold"]
forbidden_provider_terms = [
  "openai",
  "anthropic",
  "claude",
  "gpt",
  "gemini",
  "mistral",
  "llama",
  "bedrock",
  "cohere",
  "perplexity",
]
forbidden_telemetry_deps = [
  "opentelemetry",
  "opentelemetry_sdk",
  "tracing-opentelemetry",
  "sentry",
  "sentry-core",
  "sentry-tracing",
  "prometheus",
  "metrics-exporter-prometheus",
  "datadog",
]

[features]
default = []
openssl-backend = ["dep:openssl"]

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "net", "sync", "fs", "time", "process", "io-util", "io-std"] }
tokio-rustls = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Cryptography / TLS
rcgen = { workspace = true, features = ["x509-parser"] }
rustls = { workspace = true }
webpki-roots = "1"
openssl = { version = "0.10", optional = true, features = ["vendored"] }
sha1 = { workspace = true }
base64 = { workspace = true }

# HTTP/Proxy
h2 = { workspace = true }
http = "1"
bytes = "1"
soketto = { workspace = true }
pin-project-lite = "0.2"
socket2 = "0.5"

# Compression
brotli = "8.0.2"
flate2 = "1"
zstd = "0.13"

# Utilities
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
lru = "0.12"
libc = "0.2"
plist = "1"
sysinfo = "0.33"

[target.'cfg(not(windows))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
tokio-openssl = "0.6"

[dev-dependencies]
hudsucker = { version = "0.24.0", default-features = false, features = ["rcgen-ca", "rustls-client"] }
hyper-rustls = { version = "0.27.0", default-features = false, features = ["http1", "webpki-tokio"] }
rustls-pemfile = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-rustls = { workspace = true }
x509-parser = "0.18.1"

[[bench]]
name = "forwarding_latency"
harness = false

[[bench]]
name = "handshake_overhead"
harness = false

[[bench]]
name = "sse_first_chunk"
harness = false
